--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "bref/bref": "^1.2",
+        "bref/extra-php-extensions": "^0.11.16",
         "runtime/bref": "^0.1.1",
         "symfony/console": "5.3.*",
         "symfony/dotenv": "5.3.*",
