Added better logging

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -29,3 +29,4 @@ services:
         arguments:
             $minLevel: 'debug'
             $output: 'php://stderr'
+            $formatter: ['App\Psr3Formatter', 'format']
