--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "symfony/twig-bundle": "5.3.*",
         "symfony/yaml": "5.3.*",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "^2.12|^3.0",
+        "ext-json": "*"
     },
     "require-dev": {
     },
