--- a/composer.json
+++ b/composer.json
@@ -7,21 +7,25 @@
         "php": ">=7.4.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-json": "*",
         "bref/bref": "^1.2",
         "bref/extra-php-extensions": "^0.11.16",
+        "bref/symfony-bridge": "^0.1.3",
         "runtime/bref": "^0.1.1",
         "symfony/console": "5.3.*",
         "symfony/dotenv": "5.3.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.3.*",
         "symfony/maker-bundle": "^1.33",
+        "symfony/debug-bundle": "5.3.*",
+        "symfony/stopwatch": "5.3.*",
+        "symfony/web-profiler-bundle": "5.3.*",
         "symfony/runtime": "5.3.*",
         "symfony/security-bundle": "5.3.*",
         "symfony/twig-bundle": "5.3.*",
         "symfony/yaml": "5.3.*",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0",
-        "ext-json": "*"
+        "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
     },
